--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>给阳的❤</title>
+    <title>蓝陌陌</title>
     <link rel="shortcut icon" href="../../assets/images/icon/favicon.ico" type="image/x-icon">
     <style>
         html,
